// Code generated by protoc-gen-go. DO NOT EDIT.

syntax = "proto3";

package proto.mrds.core;

option go_package = "/api/mrdspb";

// Message representing the Metadata of a resource.
message Metadata {
    // ID is the unique identifier of the resource.
    string id = 1;

    // Version is the version of the resource as it is known to the Ledger.
    uint64 version = 2;

    // IsDeleted indicates whether the resource has been soft-deleted.
    bool is_deleted = 3;
}
